--- a/css/main.css
+++ b/css/main.css
@@ -765,16 +765,101 @@ h1 {
     .section_02_video .slick-next {
       right: 6.083vw; }
   .section_03 {
-    background-image: url(../assets/images/section03_bg.jpg);
     background-size: cover;
-    background-position: center center; }
+    background-position: center center;
+    position: relative; }
     @media (max-width: 1199px) {
       .section_03 {
         background-position-x: 75%; } }
+    @media (max-width: 767px) {
+      .section_03 {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column; } }
+    .section_03 .map {
+      z-index: 1;
+      position: absolute;
+      left: 0;
+      top: 5%;
+      width: 100%;
+      height: 100%; }
+      @media (max-width: 767px) {
+        .section_03 .map {
+          position: relative;
+          height: 58.90052vw;
+          margin-top: 30px;
+          top: 0;
+          -webkit-box-ordinal-group: 3;
+          -ms-flex-order: 2;
+          order: 2; } }
+    .section_03 .zoomInOut {
+      left: 16vw;
+      top: 3vw;
+      position: absolute;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      z-index: 3; }
+      .section_03 .zoomInOut > div {
+        width: 3.385vw;
+        height: 3.385vw;
+        line-height: 3.385vw;
+        font-size: 3vw; }
+        @media (max-width: 767px) {
+          .section_03 .zoomInOut > div {
+            width: 40px;
+            height: 40px;
+            line-height: 40px;
+            font-size: 20px; } }
+      .section_03 .zoomInOut .plus {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        text-align: center;
+        background-color: #51c1cc;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        color: #fff;
+        cursor: pointer;
+        margin: 0 5px; }
+      .section_03 .zoomInOut .minus {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        text-align: center;
+        background-color: #51c1cc;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        color: #fff;
+        cursor: pointer;
+        margin: 0 5px; }
     .section_03 .content {
+      z-index: 4;
       margin-left: auto;
       max-width: 23.438vw;
-      margin-right: 4.948vw; }
+      margin-right: 4.948vw;
+      position: absolute;
+      right: 0;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%); }
       @media (max-width: 1199px) {
         .section_03 .content {
           margin-right: 80px;
@@ -785,7 +870,12 @@ h1 {
           max-width: 100%;
           margin-left: auto;
           margin-right: auto;
-          margin-top: 0; } }
+          margin-top: 15px;
+          top: 0;
+          -webkit-transform: none;
+          -ms-transform: none;
+          transform: none;
+          position: static; } }
     .section_03 .heading {
       margin-bottom: 1.667vw; }
       @media (max-width: 1400px) {
