--- a/scss/_full.scss
+++ b/scss/_full.scss
@@ -840,28 +840,107 @@ h1{
         }
     }
     &_03{
-        background-image: url(../assets/images/section03_bg.jpg);
+        // background-image: url(../assets/images/section03_bg.jpg);
         background-size: cover;
         background-position: center center;
+        position: relative;
         @media(max-width:1199px){
             background-position-x: 75%;
         }
+        @media(max-width:767px){
+            display: flex;
+            flex-direction: column;
+        }
+        .map{
+            z-index: 1;
+            position: absolute;
+            left: 0;
+            top: 5%;
+            width: 100%;
+            height: 100%;
+            @media(max-width:767px){
+                position: relative;
+                height: 58.90052vw;
+                margin-top: 30px;
+                top: 0;
+                order: 2;
+            }
+        }
+        .zoomInOut{
+            left: 16vw;
+            top: 3vw;
+            position: absolute;
+            display: flex;
+            z-index: 3;
+            > div{
+                width: 3.385vw;
+                height: 3.385vw;
+                line-height: 3.385vw;
+                font-size: 3vw;
+                @media(max-width:767px){
+                    width: 40px;
+                    height: 40px;
+                    line-height: 40px;
+                    font-size: 20px;
+                }
+            }
+            .plus{
+                
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                background-color: #51c1cc;
+                border: 1px solid #fff;
+                border-radius: 50%;
+                color: #fff;
+                cursor: pointer;
+                margin: 0 5px;
+            }
+            .minus{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                background-color: #51c1cc;
+                border: 1px solid #fff;
+                border-radius: 50%;
+                color: #fff;
+                cursor: pointer;
+                margin: 0 5px;
+            }
+        }
+
         .content{
+            // margin-left: auto;
+            // // max-width: 450px;
+            // // margin-right: 95px;
+            // max-width: 23.438vw;
+            // margin-right: 4.948vw;
+
+            z-index: 4;
             margin-left: auto;
-            // max-width: 450px;
-            // margin-right: 95px;
             max-width: 23.438vw;
             margin-right: 4.948vw;
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+
             @media(max-width:1199px){
                 margin-right: 80px;
                 max-width: 42%;
                 margin-top: 5%;
+               
             }
             @media(max-width:767px){
                 max-width: 100%;
                 margin-left: auto;
                 margin-right: auto;
-                margin-top: 0;
+                margin-top:15px;
+                top: 0;
+                transform: none;
+                position: static;
             }
         }
         
